--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,13 @@
 			<version>32.1.3-jre</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
